# pepsy

./: .gitignore  README.md  algo_core.py  boundary_norm.py  boundary_states.py  boundary_sweeps.py  dmrg_fit.py  dmrg_helpers.py  linalg_registrations.py  peps_boundary_states.ipynb  peps_norm_.ipynb  pyproject.toml  quf.py  tn_norm.py  version.py
.github/workflows/: ci.yml
docs/: conf.py  examples.md  getting_started.md  index.md  installation.md  quickstart.md
docs/_static/: custom.css
docs/api/: boundary_norm.md  boundary_states.md  boundary_sweeps.md  core.md  dmrg_fit.md  index.md
docs/howto/: choose_parameters.md  index.md  troubleshooting.md
docs/tutorials/: contract_norm.md  fidelity_diagnostics.md  index.md
example/: norm.ipynb  peps_boundary_states.ipynb  peps_norm_.ipynb
pepsy/: __init__.py  boundary_norm.py  boundary_states.py  boundary_sweeps.py  core.py  dmrg_fit.py  dmrg_helpers.py  optimize_sweep.py  tn_norm.py  version.py
tests/: test_core_seed.py  test_prepare_boundary_inputs.py  test_public_api.py
