[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepsy"
dynamic = ["version"]
description = "Boundary-MPS tools for PEPS norm contraction and DMRG fitting"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "quimb",
  "cotengra",
  "autoray",
  "tqdm",
]

[project.optional-dependencies]
torch = ["torch"]
jax = ["jax", "jaxlib"]
docs = [
  "sphinx>=7",
  "myst-parser>=2",
  "pydata-sphinx-theme>=0.15",
  "nbsphinx>=0.9",
]
dev = [
  "pytest",
  "nbclient",
  "nbconvert",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pepsy*"]

[tool.setuptools.dynamic]
version = { attr = "pepsy.version.__version__" }

[tool.setuptools.package-data]
pepsy = ["VERSION", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
